# Rust-Toolbox

./: Cargo.toml  README.md
apps/calculator/: Cargo.toml
apps/calculator/src/: main.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/application/: mod.rs
crates/core/src/domain/: mod.rs
crates/maths/: Cargo.toml
crates/maths/src/: lib.rs  operators.rs
crates/maths/src/logic/: simple.rs
crates/storage/: Cargo.toml
crates/storage/src/adapters/: in_memory.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
