[workspace]
resolver = "2"
members = [
  "apps/cli",
  "crates/config",
  "crates/core",
  "crates/storage",
  "crates/utils",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.79"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
