[workspace]
resolver = "2"
members = [
  # -- apps -- 

  "apps/cli",
  "apps/calculator",

  # -- crates --

  "crates/config",
  "crates/core",
  "crates/storage",
  "crates/utils",
  "crates/maths",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.79"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
