[package]
name = "calculator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
rtb-config = { path = "../../crates/config" }
rtb-core = { path = "../../crates/core" }
rtb-storage = { path = "../../crates/storage" }
rtb-maths = { path = "../../crates/maths" }
